Stop incorrectly merging top-level bool queries